test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_parse/multi_storage_class_fun.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[24]:
  static
  int
  extern
  identifier(foo)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(foo)
  (
  )
  ;
  }
